--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <div class="app-icon contacts-icon"></div>
                 <span class="app-name">联系人</span>
             </div>
+            <div class="app-item" data-app-name="日记">
+                <div class="app-icon diary-icon"></div>
+                <span class="app-name">日记</span>
+            </div>
             <div class="app-item" data-app-name="朋友圈">
                 <div class="app-icon moments-icon"></div>
                 <span class="app-name">朋友圈</span>
